# ProjectHub

./: .gitignore  README.md  create_tables.sql  main.py  pyproject.toml  requirements.txt
app/core/: config.py
app/database/: __init__.py  db.py
app/database/models/: __init__.py  admin_models.py  professor_models.py  project_models.py  student_models.py  user_models.py
app/routes/: admin_router.py  auth_router.py  project_router.py  user_router.py
app/routes/project/: milestone_routes.py
app/schemas/: enum_schemas.py  project_schemas.py  student_schemas.py  user_schemas.py
app/services/: auth_service.py  project_service.py  user_service.py
app/services/project/: milestone_service.py
app/utils/: create_superadmin.py  dependencies.py  file_utils.py  logger.py  security.py  settings.py
documents/: ProjectHub_Software_Design_Document_Updated.docx  SRS(Group-32).docx
forntend(still working on it)/app/: globals.css  layout.tsx  page.tsx
forntend(still working on it)/app/about/: page.tsx
forntend(still working on it)/app/account/: page.tsx
forntend(still working on it)/components/: ProjectChat.tsx  category-grid.tsx  chat-box.tsx  dashboard.tsx  hero-section.tsx  kanban-board.tsx  login-form.tsx  mentor-panel.tsx  navbar.tsx  profile-form.tsx  project-card.tsx  project-submission-form.tsx  providers.tsx  signup-form.tsx  team-formation.tsx
forntend(still working on it)/contexts/: ChatContext.tsx
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: Index.tsx  (+12 more)
(+73 files in other folders)
